--- a/src/app/oil-table/oil-table.component.html
+++ b/src/app/oil-table/oil-table.component.html
@@ -18,11 +18,11 @@
       <td mat-cell *matCellDef="let row">{{row.description}}</td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns" color="primary"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
      (click)="onRowClicked(row, $event);
      onSelect(row)"
-     [class.selected]="oil === selectedOil"></tr>
+     [class.selected]="oil === selectedOil"  color="accent"></tr>
     
   </table>
 
@@ -32,12 +32,20 @@
       [pageSize]="10"
       [pageSizeOptions]="[5, 15, 25]">
   </mat-paginator>
-  
+  </div>
 
 
-</div>
-
-<div *ngIf="selectedOil">
-  <h2>{{selectedOil.name}}</h2>
-  <div>{{selectedOil.description}}</div>
-</div>
+<div *ngIf="selectedOil" class="oil_card">
+  <mat-card >
+    <mat-card-header>
+      <mat-card-title>{{selectedOil.name}}</mat-card-title>
+      <mat-card-subtitle>subtitle</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      {{selectedOil.description}}
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary">Ok</button>
+    </mat-card-actions>
+  </mat-card>
+  </div>
