added route logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1> 
-</div>
-<app-oil-table></app-oil-table>
+<app-navigation></app-navigation>
+<!-- <app-oil-table></app-oil-table>
 <p>Fire stuff</p>
 <ul>
   <li class="text" *ngFor="let task of tasks | async">
@@ -39,6 +34,6 @@
     <pre *ngFor="let oil of oils | async">{{oil.content}}</pre>
   </div>
  
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
