--- a/src/app/oil-detail/oil-detail.component.html
+++ b/src/app/oil-detail/oil-detail.component.html
@@ -1,6 +1,8 @@
 <!-- <p *ngIf="!oil">
   Here is where you'll see details of any oil you click
 </p> -->
+<p>This is oil {{oilId}}</p>
+
 
 <div *ngIf="selectedOil">
   <h3> {{oil.name}}</h3>
