--- a/src/app/oil-table/oil-table.component.html
+++ b/src/app/oil-table/oil-table.component.html
@@ -45,7 +45,7 @@
       {{selectedOil.description}}
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button color="primary">Ok</button>
+      <button mat-button color="primary" (click)="seeDetail(selectedOil)">Ok</button>
     </mat-card-actions>
   </mat-card>
   </div>
