--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,8 +1,8 @@
-$mdc-theme-primary: #FEDBD0;
-$mdc-theme-on-primary: #442C2E;
-$mdc-theme-secondary: #FEEAE6;
-$mdc-theme-on-secondary: #442C2E;
-$mdc-theme-surface: #FFFBFA;
-$mdc-theme-on-surface: #442C2E;
-$mdc-theme-background: #FFFFFF;
-$mdc-theme-on-background: #442C2E;
+$mdc-theme-primary: #5D1049;
+$mdc-theme-on-primary: #FFFFFF;
+$mdc-theme-secondary: #E30425;
+$mdc-theme-on-secondary: #FFFFFF;
+$mdc-theme-surface: #FFFFFF;
+$mdc-theme-on-surface: #000000;
+$mdc-theme-background: #F4E2ED;
+$mdc-theme-on-background: #000000;
