--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -22,5 +22,6 @@
       <span>Oil Finder</span>
     </mat-toolbar>
     Welcome to the Oil Finder
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
