--- a/src/oil-theme.scss
+++ b/src/oil-theme.scss
@@ -1,4 +1,10 @@
 @import '~@angular/material/theming';
+@import "@material/drawer/mdc-drawer";
+@import "@material/list/mdc-list";
+@import "@material/image-list/mdc-image-list";
+@import "@material/ripple/mixins";
+@import "@material/typography/mdc-typography";
+@import "@material/elevation/mdc-elevation";
 
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
