--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-@import './oil-theme.scss'
+@import "@material/drawer/mdc-drawer";
+@import "@material/list/mdc-list";
+@import "@material/image-list/mdc-image-list";
+@import "@material/ripple/mixins";
+@import "@material/typography/mdc-typography";
+@import "@material/elevation/mdc-elevation";
