updates to design

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -21,7 +21,11 @@
       </button>
       <span>Oil Finder</span>
     </mat-toolbar>
-    Welcome to the Oil Finder
-    <router-outlet></router-outlet>
+    <header>
+      <h1>Welcome to the Oil Finder</h1>
+    </header>
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
